changed image and alignment in 'About Me' section

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,10 +94,10 @@
     <div class="container">
       <!--Section: Content-->
       <section>
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-evenly align-items-center">
           <h3 class="mb-5 text-center" id="aboutMe"><strong>About Me</strong></h3>
           <div class="col-md-4 mb-4 text-md-end text-center">
-              <img src="/img/Justin Ng.jpg" class="img-fluid rounded-circle" id="profileImg"/>
+              <img src="/img/justin.jpg" class="img-fluid rounded-circle" id="profileImg"/>
           </div>
 
           <div class="col-md-4 mb-4">
